Filters integration in lobby, Store payment integration

--- a/www/start.html
+++ b/www/start.html
@@ -35,11 +35,13 @@
     <script type="text/javascript" src="views/compiled/lobby-feed.js"></script>
     <script type="text/javascript" src="views/partials/my-lobby.js"></script>
     <script type="text/javascript" src="views/partials/filters.js"></script>
+    <script type="text/javascript" src="views/partials/filter-tournaments.js"></script>
     <script type="text/javascript" src="views/partials/each-quiniela.js"></script>
     <script type="text/javascript" src="views/partials/each-my-quiniela.js"></script>
     <script type="text/javascript" src="views/partials/quiniela-games.js"></script>
     <script type="text/javascript" src="views/compiled/detail-quiniela.js"></script>
     <script type="text/javascript" src="views/compiled/detail-quiniela-registered.js"></script>
+    <script type="text/javascript" src="views/compiled/detail-quiniela-places.js"></script>
     <script type="text/javascript" src="views/compiled/profile.js"></script>
     <script type="text/javascript" src="views/compiled/deposit.js"></script>
     <script type="text/javascript" src="views/compiled/deposit-stores.js"></script>
