Similar picks rendered into select control, register quiniela entry fee changes depending on number of entries

--- a/www/start.html
+++ b/www/start.html
@@ -39,6 +39,7 @@
     <script type="text/javascript" src="views/partials/each-quiniela.js"></script>
     <script type="text/javascript" src="views/partials/each-my-quiniela.js"></script>
     <script type="text/javascript" src="views/partials/quiniela-games.js"></script>
+    <script type="text/javascript" src="views/partials/similar-picks.js"></script>
     <script type="text/javascript" src="views/compiled/detail-quiniela.js"></script>
     <script type="text/javascript" src="views/compiled/detail-quiniela-registered.js"></script>
     <script type="text/javascript" src="views/compiled/detail-quiniela-places.js"></script>
