--- a/www/start.html
+++ b/www/start.html
@@ -43,6 +43,7 @@
     <script type="text/javascript" src="views/compiled/detail-quiniela.js"></script>
     <script type="text/javascript" src="views/compiled/detail-quiniela-registered.js"></script>
     <script type="text/javascript" src="views/compiled/detail-quiniela-places.js"></script>
+    <script type="text/javascript" src="views/partials/other-entries.js"></script>
     <script type="text/javascript" src="views/compiled/profile.js"></script>
     <script type="text/javascript" src="views/compiled/deposit.js"></script>
     <script type="text/javascript" src="views/compiled/deposit-stores.js"></script>
