Render live game and other entries, general QA and refactoring

--- a/www/start.html
+++ b/www/start.html
@@ -43,6 +43,7 @@
     <script type="text/javascript" src="views/compiled/detail-quiniela.js"></script>
     <script type="text/javascript" src="views/compiled/detail-quiniela-registered.js"></script>
     <script type="text/javascript" src="views/compiled/detail-quiniela-closed.js"></script>
+    <script type="text/javascript" src="views/compiled/detail-quiniela-live.js"></script>
     <script type="text/javascript" src="views/partials/other-entries.js"></script>
     <script type="text/javascript" src="views/compiled/profile.js"></script>
     <script type="text/javascript" src="views/compiled/deposit.js"></script>
