--- a/www/start.html
+++ b/www/start.html
@@ -45,6 +45,7 @@
     <script type="text/javascript" src="views/compiled/detail-quiniela-closed.js"></script>
     <script type="text/javascript" src="views/compiled/detail-quiniela-live.js"></script>
     <script type="text/javascript" src="views/partials/other-entries.js"></script>
+    <script type="text/javascript" src="views/partials/tabs/scoreboard.js"></script>
     <script type="text/javascript" src="views/compiled/profile.js"></script>
     <script type="text/javascript" src="views/compiled/deposit.js"></script>
     <script type="text/javascript" src="views/compiled/deposit-stores.js"></script>
