--- a/www/lobby.html
+++ b/www/lobby.html
@@ -1,18 +1,17 @@
 <!DOCTYPE HTML>
-	<head>
-		<meta charset="utf-8">
+    <head>
+        <meta charset="utf-8">
         <meta http-equiv="Content-Security-Policy" content="script-src 'self' https://googleapis.com/ https://openpay.s3.amazonaws.com http://connect.facebook.net/ 'unsafe-inline' 'unsafe-eval'; img-src *">
         <meta http-equiv="cleartype" content="on">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0, maximum-scale=1, minimum-scale=1">
         <title>PickWin | Start</title>
-		<link rel="stylesheet" type="text/css" href="css/style.css">
+        <link rel="stylesheet" type="text/css" href="css/style.css">
         <script type="text/javascript" src="js/bower_components/fingerprintjs2/dist/fingerprint2.min.js"></script>
         <script type="text/javascript" src="js/bower_components/handlebars/handlebars.min.js"></script>
         <script type="text/javascript" src="js/bower_components/moment/min/moment-with-locales.min.js"></script>
-        <script type="text/javascript" src="js/bower_components/countdownjs/countdown.min.js"></script>
-        <script type="text/javascript" src="js/bower_components/moment-countdown/dist/moment-countdown.min.js"></script>
         <script src="js/jquery-1.12.2.min.js"></script>
+        <script type="text/javascript" src="js/bower_components/jquery.countdown/dist/jquery.countdown.min.js"></script>
         <link href="https://fonts.googleapis.com/css?family=Lato:300,300i,400,400i,700,700i" rel="stylesheet">
     </head>
     
@@ -36,11 +35,23 @@
     <script type="text/javascript" src="views/compiled/lobby-feed.js"></script>
     <script type="text/javascript" src="views/partials/my-lobby.js"></script>
     <script type="text/javascript" src="views/partials/filters.js"></script>
+    <script type="text/javascript" src="views/partials/filter-tournaments.js"></script>
     <script type="text/javascript" src="views/partials/each-quiniela.js"></script>
     <script type="text/javascript" src="views/partials/each-my-quiniela.js"></script>
     <script type="text/javascript" src="views/partials/quiniela-games.js"></script>
+    <script type="text/javascript" src="views/partials/similar-picks.js"></script>
     <script type="text/javascript" src="views/compiled/detail-quiniela.js"></script>
+    <script type="text/javascript" src="views/partials/other-entries.js"></script>
     <script type="text/javascript" src="views/compiled/detail-quiniela-registered.js"></script>
+    <script type="text/javascript" src="views/compiled/detail-quiniela-closed.js"></script>
+
+    <script type="text/javascript" src="views/compiled/detail-quiniela-live.js"></script>
+    <script type="text/javascript" src="views/partials/tabs/places.js"></script>
+    <script type="text/javascript" src="views/partials/tabs/chat.js"></script>
+    <script type="text/javascript" src="views/partials/tabs/prizes.js"></script>
+    <script type="text/javascript" src="views/partials/tabs/group-picks.js"></script>
+    <script type="text/javascript" src="views/partials/tabs/scoreboard.js"></script>
+
     <script type="text/javascript" src="views/compiled/profile.js"></script>
     <script type="text/javascript" src="views/compiled/deposit.js"></script>
     <script type="text/javascript" src="views/compiled/deposit-stores.js"></script>
@@ -60,10 +71,11 @@
     <script type='text/javascript' src="https://openpay.s3.amazonaws.com/openpay-data.v1.min.js"></script>
     <script type="text/javascript" src="js/easing.js"></script>
     <script type="text/javascript" src="js/bower_components/thenby/thenBy.min.js"></script>
-	<script type="text/javascript" src="js/main.js"></script>
-	
-	<script type="text/javascript">
-		app.render_lobby();
-	</script>
+    <script type="text/javascript" src="js/main.js"></script>
+    
+    <script type="text/javascript">
+        window.is_access = false;
+        app.render_lobby();
+    </script>
     <script type="text/javascript" src="js/scripts/document_ready.js"></script>
 </html>
