Implemented velocity to improve animations performance, some stylo changes

--- a/www/start.html
+++ b/www/start.html
@@ -14,6 +14,7 @@
         <script type="text/javascript" src="js/bower_components/moment/min/moment-with-locales.min.js"></script>
         <script src="js/jquery-1.12.2.min.js"></script>
         <script type="text/javascript" src="js/bower_components/jquery.countdown/dist/jquery.countdown.min.js"></script>
+        <script type="text/javascript" src="js/bower_components/velocity/velocity.min.js"></script>
         <link href="https://fonts.googleapis.com/css?family=Lato:300,300i,400,400i,700,700i" rel="stylesheet">
     </head>
     
