General color check and changing image buttons to css styled

--- a/www/start.html
+++ b/www/start.html
@@ -8,7 +8,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0, maximum-scale=1, minimum-scale=1">
         <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0, maximum-scale=1, minimum-scale=1">
         <title>PickWin | Start</title>
-		<link rel="stylesheet" type="text/css" href="css/style.css">
+        <link rel="stylesheet" type="text/css" href="css/style.css">
+        <link rel="stylesheet" type="text/css" href="shared/css/sprites.css">
         <script type="text/javascript" src="js/bower_components/fingerprintjs2/dist/fingerprint2.min.js"></script>
         <script type="text/javascript" src="js/bower_components/handlebars/handlebars.min.js"></script>
         <script type="text/javascript" src="js/bower_components/moment/min/moment-with-locales.min.js"></script>
