Tab navigation in upcoming (not registered) game, include participants new tab view

--- a/www/start.html
+++ b/www/start.html
@@ -51,6 +51,7 @@
 
     <script type="text/javascript" src="views/compiled/detail-quiniela-live.js"></script>
     <script type="text/javascript" src="views/partials/tabs/places.js"></script>
+    <script type="text/javascript" src="views/partials/tabs/participants.js"></script>
     <script type="text/javascript" src="views/partials/tabs/chat.js"></script>
     <script type="text/javascript" src="views/partials/tabs/prizes.js"></script>
     <script type="text/javascript" src="views/partials/tabs/group-picks.js"></script>
