Solved bug rendering profile view, solved broken navigation between entries, cancel entry working, some stylo tweaks

--- a/www/profile.html
+++ b/www/profile.html
@@ -77,7 +77,7 @@
     
     <script type="text/javascript">
         window.is_access = false;
-            app.render_profile();
+            app.fetch_profile(null, 'methods');
     </script>
     <script type="text/javascript" src="js/scripts/document_ready.js"></script>
 </html>
