Tab navigation fixed in profile and add funds views

--- a/www/start.html
+++ b/www/start.html
@@ -9,7 +9,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0, maximum-scale=1, minimum-scale=1">
         <title>PickWin | Start</title>
         <link rel="stylesheet" type="text/css" href="css/style.css">
-        <link rel="stylesheet" type="text/css" href="_shared/sprites.css">
+        <link rel="stylesheet" type="text/css" href="_shared/css/sprites.css">
         <script type="text/javascript" src="js/bower_components/fingerprintjs2/dist/fingerprint2.min.js"></script>
         <script type="text/javascript" src="js/bower_components/handlebars/handlebars.min.js"></script>
         <script type="text/javascript" src="js/bower_components/moment/min/moment-with-locales.min.js"></script>
